src/app/app.component.scss
@import "node_modules/bootstrap/scss/bootstrap.scss";

@import 'theme.scss';

#wrapper {
    display: grid;
    grid-template-rows: 56px 1fr auto;
    grid-template-columns: 420px 1fr 240px;
    width: 100vw;
    height: 100vh;

    user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    -webkit-touch-callout: none;
    -o-user-select: none;
    -moz-user-select: none;
}

#navbar {
    grid-row: 1;
    grid-column: 1 / 4;
    padding-left: 0;
}

#metadata-editor {
    grid-row: 2 / 4;
    grid-column: 1 / 4;
    /* position: absolute; */
    z-index: 2000;
    width: 100%;
    overflow-x: scroll;
    background: white;
}

#query-view {
    grid-row: 2 / 4;
    grid-column: 1;
    display: grid;
    grid-template-rows: auto auto 1fr;
    grid-template-columns: 180px 240px;
    overflow: hidden;
}

#new-query {
    grid-row: 1;
    grid-column: 1 / 3;
    position: relative;
    font-size: 0.9rem;

    button {
        display: block;
    }

    #query-creator {
        background:white;
        width: 100%;
        position: absolute;
        z-index:100;
    }
}

.section-header {
    font-family: 'Roboto Condensed', 'Noto Sans KR';
    background: $ui-background-color;
    margin: 0;
    padding: 0;
    font-size: 1rem;
}

.section-subheader {
    font-family: 'Roboto Condensed', 'Noto Sans KR';
    background: lighten($ui-background-color, 4%);
    margin: 0;
    padding: 0;
    font-size: 1rem;
    padding: 0.2rem;
}

#completed-query-view-header {
    grid-row: 2;
    grid-column: 1;
    position: relative;
}

#completed-query-view {
    grid-row: 3;
    grid-column: 1;
    overflow-y: scroll;
    overflow-x: hidden;
}

#ongoing-query-view-header {
    grid-row: 2;
    grid-column: 2;
    position: relative;
}

#ongoing-query-view {
    grid-row: 3;
    grid-column: 2;

    display: grid;
    grid-template-rows: 30px 1fr;
}

#queries {
    height: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
}

.cursor-pointer {
    cursor: pointer;
}

.round-robin {
    position: absolute;
    top:.35rem;
    right:0;
    font-size: .8rem;

    .form-check-input {
        margin-top: .1rem;
        margin-left: -1rem;
    }
}

.query {
    padding: 3px;
    background: #fefefe;
    position: relative;
    width: 100%;
    overflow:hidden;
    border:1px solid $border-color;

    progress-ring {
        height: 56px;
        flex-basis: 56px;
    }

    .field-names {
        font-size: 0.8rem;
        list-style: none;
        margin: 0;
        flex-grow: 1;
        flex-basis: auto;
    }

    .field-names div {
        white-space: nowrap;
        overflow: hidden;
        width: calc(100% - .5rem);
    }

    .filtered-by {
        opacity: .5;
        font-family: 'Roboto Condensed', 'Noto Sans KR';
    }

    &:hover {
        cursor: pointer;
        background: lighten($ui-background-color, 3%);

        .actions {
            display: block;
        }
    }

    &.selected {
        border-color: $primary;
        background: lighten($primary, 46%);
    }

    &.highlighted {
        border-color: $warning;
        background: lighten($warning, 45%);
    }
}

#completed-query-view .field-names div {
    width: 100%;
}

.actions {
    position: absolute;
    z-index: 10;
    top: 0;
    right: 0;
    display: none;

    button {
        font-size: .8rem;
        background-color: transparent;
        border: 0;
        cursor: pointer;
    }
}

.state-icon {
    font-size:0.6em;
    position: absolute;
    left:3px;
    top:3px;
}

#main {
    grid-row: 2;
    grid-column: 2;
    overflow: scroll;
    position: relative;
}

vis {
    min-height: 100%;
}

#floating-svg-wrapper {
    position: sticky;
    display: block;
    float: left;
    background: white;
    bottom: 20px;

    .legend {
        pointer-events: none;
    }

    .angular-brush {
        position: absolute;
        left: 0;
    }
}

#safeguard-view {
    grid-row: 2 / 4;
    grid-column: 3;
    display: flex;
    flex-direction: column;
}

#safeguard-list {
    overflow-y: scroll;
    flex-grow: 1;
}


#safeguard-config-view {
    grid-row: 3;
    grid-column: 2;
}

.display {
    font-size: 1.2rem;
}

.guide {
    font-size:.9rem;

    .tip {
        font-family: #aaa;
        font-family: 'Roboto Condensed', 'Noto Sans KR';
        font-weight: bold;
    }
}

#safeguard-view {
    .btn-secondary {
        background-color: lighten($operator-highlight-color, 15%);
        border-color: lighten($operator-highlight-color, 10%);
    }

    .btn-secondary:hover {
        background-color: lighten($operator-highlight-color, 10%);
        border-color: lighten($operator-highlight-color, 5%);
    }

    .btn-secondary.active {
        background-color: lighten($operator-highlight-color, 0%);
        border-color: $operator-highlight-color;
    }
}

.variable1 {
    color: $variable1-highlight-color;
}

.variable1.highlighted {
    background: lighten($variable1-highlight-color, 50%);
}

.variable2 {
    color: $variable2-highlight-color;
}

.variable2.highlighted {
    background: lighten($variable2-highlight-color, 40%);
}

.operator {
    color: $operator-highlight-color;
    font-weight: bold;
}

.operator.highlighted {
    background: lighten($operator-highlight-color, 40%);
}

.constant {
    color: $constant-highlight-color;
}

.constant.highlighted {
    background: lighten($constant-highlight-color, 50%);
}


#mark-complete {
    position: fixed;
    right: 0;
    bottom: 0;
}

::ng-deep .modal-xxl {
    .modal-lg {
        max-width: 90% !important;
    }

    .modal-header {
        border-bottom: none;
    }

    .modal-body {
        overflow-x: auto;
        padding: 0;
    }
}

